// Copyright 2022 Matrix Origin
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package metric;
option go_package = "github.com/matrixorigin/matrixone/pkg/pb/metric";

message LabelPair {
    string name  = 1;
    string value = 2;
}

enum MetricType {
    COUNTER = 0;
    GAUGE   = 1;
    RAWHIST = 2;
}

message Gauge {
    double value = 1;
}

message Counter {
    double value = 1;
}

message Sample {
    int64 datetime = 1;
    double value   = 2;
}

message RawHist {
    repeated Sample samples = 1;  // RawHist samples
}

message Metric {
    repeated LabelPair label = 1;
    Gauge gauge              = 2;
    Counter counter          = 3;
    RawHist rawHist          = 4;
    int64 collecttime        = 5;  // same type with types.Datetime in MO
}

message MetricFamily {
    string name            = 1;
    string help            = 2;
    MetricType type        = 3;
    repeated Metric metric = 4;
    int32 node             = 5;
    string role            = 6;
}
